--- a/Game08.Sdk.CodeMixer.CSharp/Game08.Sdk.CodeMixer.CSharp.csproj
+++ b/Game08.Sdk.CodeMixer.CSharp/Game08.Sdk.CodeMixer.CSharp.csproj
@@ -1,7 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Game08.Sdk.CodeMixer.Core\Game08.Sdk.CodeMixer.Core.csproj" />
+  </ItemGroup>
 
 </Project>
