--- a/Game08.Sdk.CodeMixer.CSharp/Game08.Sdk.CodeMixer.CSharp.csproj
+++ b/Game08.Sdk.CodeMixer.CSharp/Game08.Sdk.CodeMixer.CSharp.csproj
@@ -1,11 +1,16 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.CodeAnalysis" Version="3.2.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Game08.Sdk.CodeMixer.Core\Game08.Sdk.CodeMixer.Core.csproj" />
+    <ProjectReference Include="..\Game08.Sdk.CodeMixer.Environment\Game08.Sdk.CodeMixer.Environment.csproj" />
   </ItemGroup>
 
 </Project>
