--- a/Game08.Sdk.CodeMixer.Environment/Game08.Sdk.CodeMixer.Environment.csproj
+++ b/Game08.Sdk.CodeMixer.Environment/Game08.Sdk.CodeMixer.Environment.csproj
@@ -5,7 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Game08.Sdk.GlslLanguageServices.Builder" Version="1.0.3" />
+    <PackageReference Include="Microsoft.CodeAnalysis.Workspaces.Common" Version="3.2.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
   </ItemGroup>
 
   <ItemGroup>
