--- a/Game08.Sdk.CodeMixer.Environment/Game08.Sdk.CodeMixer.Environment.csproj
+++ b/Game08.Sdk.CodeMixer.Environment/Game08.Sdk.CodeMixer.Environment.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.CodeAnalysis.Workspaces.Common" Version="3.2.1" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+    <PackageReference Include="System.IO.Abstractions" Version="6.0.21" />
   </ItemGroup>
 
   <ItemGroup>
