--- a/Game08.Sdk.CodeMixer.UnitTests/Game08.Sdk.CodeMixer.UnitTests.csproj
+++ b/Game08.Sdk.CodeMixer.UnitTests/Game08.Sdk.CodeMixer.UnitTests.csproj
@@ -5,12 +5,25 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
-    <PackageReference Include="NUnit" Version="3.12.0" />
-    <PackageReference Include="NUnit3TestAdapter" Version="3.14.0" />
+    <None Remove="Resources\PipelineConfigurations\IntegrationTestConfig01.json" />
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Include="Resources\PipelineConfigurations\IntegrationTestConfig01.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="FluentAssertions" Version="5.8.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
+    <PackageReference Include="Moq" Version="4.12.0" />
+    <PackageReference Include="NUnit" Version="3.12.0" />
+    <PackageReference Include="NUnit3TestAdapter" Version="3.14.0" />
+    <PackageReference Include="System.IO.Abstractions" Version="6.0.23" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Game08.Sdk.CodeMixer.Core\Game08.Sdk.CodeMixer.Core.csproj" />
+    <ProjectReference Include="..\Game08.Sdk.CodeMixer.CSharp\Game08.Sdk.CodeMixer.CSharp.csproj" />
     <ProjectReference Include="..\Game08.Sdk.CodeMixer.Environment\Game08.Sdk.CodeMixer.Environment.csproj" />
   </ItemGroup>
 
