--- a/Game08.Sdk.CodeMixer.CSharp/Game08.Sdk.CodeMixer.CSharp.csproj
+++ b/Game08.Sdk.CodeMixer.CSharp/Game08.Sdk.CodeMixer.CSharp.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.CodeAnalysis" Version="3.2.1" />
+    <PackageReference Include="Microsoft.CodeAnalysis" Version="3.3.0-beta2-final" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
   </ItemGroup>
 
