--- a/Game08.Sdk.CodeMixer.Launcher.MSBuild/Game08.Sdk.CodeMixer.Launcher.MSBuild.csproj
+++ b/Game08.Sdk.CodeMixer.Launcher.MSBuild/Game08.Sdk.CodeMixer.Launcher.MSBuild.csproj
@@ -16,7 +16,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Build.Locator" Version="1.2.6" />
-    <PackageReference Include="Microsoft.CodeAnalysis.Workspaces.MSBuild" Version="3.2.1" />
+    <PackageReference Include="Microsoft.CodeAnalysis.Workspaces.MSBuild" Version="3.3.0-beta2-final" />
     <PackageReference Include="System.IO.Abstractions" Version="6.0.23" />
   </ItemGroup>
 
