--- a/Game08.Sdk.CodeMixer.Sandbox.MsBuildRunner/Game08.Sdk.CodeMixer.Sandbox.MsBuildRunner.csproj
+++ b/Game08.Sdk.CodeMixer.Sandbox.MsBuildRunner/Game08.Sdk.CodeMixer.Sandbox.MsBuildRunner.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.CodeAnalysis" Version="3.2.1" />
+    <PackageReference Include="Microsoft.CodeAnalysis" Version="3.3.0-beta2-final" />
     <PackageReference Include="System.IO.Abstractions" Version="6.0.23" />
   </ItemGroup>
 
