--- a/Game08.Sdk.CodeMixer.CSharp/Game08.Sdk.CodeMixer.CSharp.nuspec
+++ b/Game08.Sdk.CodeMixer.CSharp/Game08.Sdk.CodeMixer.CSharp.nuspec
@@ -1,10 +1,12 @@
 ﻿<package xmlns="http://schemas.microsoft.com/packaging/2012/06/nuspec.xsd">
   <metadata>
     <id>Game08.Sdk.CodeMixer.CSharp</id>
-    <version>1.0.0</version>
+    <version>1.0.3</version>
     <authors>Yevgen Nabokov</authors>
     <description>C# library for the code generation pipeline.</description>
-    <dependencies>      
+    <dependencies>
+      <dependency id="Microsoft.CodeAnalysis" version="3.2" />
+      <dependency id="Newtonsoft.Json" version="12.0.1" />
     </dependencies>
   </metadata>
   <files>
