Adding limited type script support.

--- a/Nuget.config
+++ b/Nuget.config
@@ -9,6 +9,7 @@
 
     <!-- Add the private NuGet package source for this solution -->
     <add key="LocalOutput" value="..\Game08.Sdk.GlslLanguageServices\NugetOutputs" />
+    <add key="LocalCSToTSOutput" value="..\Game08.Sdk.CSToTS\NugetOutputs" />
 
   </packageSources>
 
