--- a/Game08.Sdk.CodeMixer.LimitedTypeScript/Game08.Sdk.CodeMixer.LimitedTypeScript.csproj
+++ b/Game08.Sdk.CodeMixer.LimitedTypeScript/Game08.Sdk.CodeMixer.LimitedTypeScript.csproj
@@ -1,7 +1,18 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Game08.Sdk.LTS.ModelToCode.Generator" Version="1.0.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+    <PackageReference Include="System.IO.Abstractions" Version="6.0.23" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Game08.Sdk.CodeMixer.Core\Game08.Sdk.CodeMixer.Core.csproj" />
+    <ProjectReference Include="..\Game08.Sdk.CodeMixer.Environment\Game08.Sdk.CodeMixer.Environment.csproj" />
+  </ItemGroup>
 
 </Project>
