--- a/Game08.Sdk.CodeMixer.LimitedTypeScript/Game08.Sdk.CodeMixer.LimitedTypeScript.csproj
+++ b/Game08.Sdk.CodeMixer.LimitedTypeScript/Game08.Sdk.CodeMixer.LimitedTypeScript.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Game08.Sdk.LTS.Builder" Version="1.0.2" />
     <PackageReference Include="Game08.Sdk.LTS.ModelToCode.Generator" Version="1.0.1" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
     <PackageReference Include="System.IO.Abstractions" Version="6.0.23" />
