--- a/SandboxProjects/TestProjects.SimplePluginTest/TestProjects.SubjectProj/TestProjects.SubjectProj.csproj
+++ b/SandboxProjects/TestProjects.SimplePluginTest/TestProjects.SubjectProj/TestProjects.SubjectProj.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="TestPlugins.AddProperty" Version="1.0.1" />
+  </ItemGroup>
+
 </Project>
