Added LTS plugin test project to sandbox.

--- a/Game08.Sdk.CodeMixer.Sandbox.MsBuildRunner/Game08.Sdk.CodeMixer.Sandbox.MsBuildRunner.csproj
+++ b/Game08.Sdk.CodeMixer.Sandbox.MsBuildRunner/Game08.Sdk.CodeMixer.Sandbox.MsBuildRunner.csproj
@@ -16,6 +16,7 @@
     <ProjectReference Include="..\Game08.Sdk.CodeMixer.Environment\Game08.Sdk.CodeMixer.Environment.csproj" />
     <ProjectReference Include="..\Game08.Sdk.CodeMixer.Glsl\Game08.Sdk.CodeMixer.Glsl.csproj" />
     <ProjectReference Include="..\Game08.Sdk.CodeMixer.Launcher.MSBuild\Game08.Sdk.CodeMixer.Launcher.MSBuild.csproj" />
+    <ProjectReference Include="..\Game08.Sdk.CodeMixer.LimitedTypeScript\Game08.Sdk.CodeMixer.LimitedTypeScript.csproj" />
   </ItemGroup>
 
 </Project>
