--- a/Game08.Sdk.CodeMixer.LimitedTypeScript/Game08.Sdk.CodeMixer.LimitedTypeScript.csproj
+++ b/Game08.Sdk.CodeMixer.LimitedTypeScript/Game08.Sdk.CodeMixer.LimitedTypeScript.csproj
@@ -1,19 +1,35 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFrameworks>netstandard2.0;netcoreapp2.2;net472</TargetFrameworks>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Game08.Sdk.LTS.Builder" Version="1.0.8" />
-    <PackageReference Include="Game08.Sdk.LTS.ModelToCode.Generator" Version="1.0.2" />
+    <PackageReference Include="Game08.Sdk.LTS.ModelToCode.Generator" Version="1.0.3" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
     <PackageReference Include="System.IO.Abstractions" Version="6.0.23" />
   </ItemGroup>
 
+  <PropertyGroup>
+    <NoPackageAnalysis>true</NoPackageAnalysis>
+    <NuspecFile>Game08.Sdk.CodeMixer.LimitedTypeScript.nuspec</NuspecFile>
+    <IntermediatePackDir>$(MSBuildProjectDirectory)/bin/$(Configuration)/publish/</IntermediatePackDir>
+    <PublishDir>$(IntermediatePackDir)$(TargetFramework)/</PublishDir>
+    <NuspecProperties>publishDir=$([MSBuild]::NormalizeDirectory($(IntermediatePackDir)))</NuspecProperties>
+    <PackageOutputPath>$(SolutionDir)/NugetOutputs</PackageOutputPath>
+  </PropertyGroup>
+    
   <ItemGroup>
     <ProjectReference Include="..\Game08.Sdk.CodeMixer.Core\Game08.Sdk.CodeMixer.Core.csproj" />
     <ProjectReference Include="..\Game08.Sdk.CodeMixer.Environment\Game08.Sdk.CodeMixer.Environment.csproj" />
   </ItemGroup>
+
+<Target Name="PublishAll" BeforeTargets="GenerateNuspec">
+    <ItemGroup>
+      <_TargetFramework Include="$(TargetFrameworks)" />
+    </ItemGroup>
+    <MSBuild Projects="$(MSBuildProjectFullPath)" Targets="Publish" Properties="TargetFramework=%(_TargetFramework.Identity)" />
+  </Target>
 
 </Project>
