--- a/Game08.Sdk.CodeMixer.Launcher.MSBuild/Game08.Sdk.CodeMixer.Launcher.MSBuild.csproj
+++ b/Game08.Sdk.CodeMixer.Launcher.MSBuild/Game08.Sdk.CodeMixer.Launcher.MSBuild.csproj
@@ -15,6 +15,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Build" Version="16.0.461">
+      <ExcludeAssets>runtime</ExcludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.Build.Locator" Version="1.2.6" />
     <PackageReference Include="Microsoft.CodeAnalysis.Workspaces.MSBuild" Version="3.3.0-beta2-final" />
     <PackageReference Include="System.IO.Abstractions" Version="6.0.23" />
