Added builder tree for LTS. Implementing metadata management.

--- a/Game08.Sdk.CodeMixer.UnitTests/Game08.Sdk.CodeMixer.UnitTests.csproj
+++ b/Game08.Sdk.CodeMixer.UnitTests/Game08.Sdk.CodeMixer.UnitTests.csproj
@@ -28,4 +28,8 @@
     <ProjectReference Include="..\Game08.Sdk.CodeMixer.Environment\Game08.Sdk.CodeMixer.Environment.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Metadata\" />
+  </ItemGroup>
+
 </Project>
