--- a/SandboxProjects/TestProjects.LTSPluginTest/LtsTestPlugin/LtsTestPlugin.csproj
+++ b/SandboxProjects/TestProjects.LTSPluginTest/LtsTestPlugin/LtsTestPlugin.csproj
@@ -5,8 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Game08.Sdk.CodeMixer.CSharp" Version="1.0.3" />
-    <PackageReference Include="Game08.Sdk.CodeMixer.LimitedTypeScript" Version="1.0.2" />
+    <PackageReference Include="Game08.Sdk.CodeMixer.CSharp" Version="1.0.5" />
+    <PackageReference Include="Game08.Sdk.CodeMixer.LimitedTypeScript" Version="1.0.7" />
+    <PackageReference Include="Game08.Sdk.LTS.Builder" Version="1.0.11" />
     <PackageReference Include="Microsoft.CodeAnalysis" Version="3.2.1" />
   </ItemGroup>
 
