--- a/Game08.Sdk.CodeMixer.Launcher.MSBuild.WithDefaultAdapters/Game08.Sdk.CodeMixer.Launcher.MSBuild.WithDefaultAdapters.csproj
+++ b/Game08.Sdk.CodeMixer.Launcher.MSBuild.WithDefaultAdapters/Game08.Sdk.CodeMixer.Launcher.MSBuild.WithDefaultAdapters.csproj
@@ -17,15 +17,35 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Game08.Sdk.LTS.ModelToCode.Generator" Version="1.0.9">
+      <GeneratePathProperty>true</GeneratePathProperty>
+    </PackageReference>
     <PackageReference Include="System.IO.Abstractions" Version="7.0.7" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Game08.Sdk.CodeMixer.CSharp.MsBuild\Game08.Sdk.CodeMixer.CSharp.MsBuild.csproj" />
+    <ProjectReference Include="..\Game08.Sdk.CodeMixer.CSharp\Game08.Sdk.CodeMixer.CSharp.csproj" />
     <ProjectReference Include="..\Game08.Sdk.CodeMixer.Glsl.MsBuild\Game08.Sdk.CodeMixer.Glsl.MsBuild.csproj" />
+    <ProjectReference Include="..\Game08.Sdk.CodeMixer.Glsl\Game08.Sdk.CodeMixer.Glsl.csproj" />
     <ProjectReference Include="..\Game08.Sdk.CodeMixer.Launcher.MSBuild\Game08.Sdk.CodeMixer.Launcher.MSBuild.csproj" />
-    <ProjectReference Include="..\Game08.Sdk.CodeMixer.LimitedTypeScript.MsBuild\Game08.Sdk.CodeMixer.LimitedTypeScript.MsBuild.csproj" />
+    <ProjectReference Include="..\Game08.Sdk.CodeMixer.LimitedTypeScript.MsBuild\Game08.Sdk.CodeMixer.LimitedTypeScript.MsBuild.csproj">
+      <Private>true</Private>
+    </ProjectReference>
+    <ProjectReference Include="..\Game08.Sdk.CodeMixer.LimitedTypeScript\Game08.Sdk.CodeMixer.LimitedTypeScript.csproj">
+      <Private>true</Private>
+    </ProjectReference>
   </ItemGroup>
+
+  <ItemGroup>
+    <NodeRedist Include="$(PkgGame08_Sdk_LTS_ModelToCode_Generator)\lib\$(TargetFramework)\NodeRedist\**\*.*" />
+    <CodeGeneratorJs Include="$(PkgGame08_Sdk_LTS_ModelToCode_Generator)\lib\$(TargetFramework)\CodeGeneratorJs\**\*.*" />
+  </ItemGroup>
+
+  <Target Name="CopyRedist" BeforeTargets="Publish">
+    <Copy SourceFiles="@(NodeRedist)" DestinationFolder="$(PublishDir)\NodeRedist\%(RecursiveDir)" />
+    <Copy SourceFiles="@(CodeGeneratorJs)" DestinationFolder="$(PublishDir)\CodeGeneratorJs\%(RecursiveDir)" />
+  </Target>
 
   <Target Name="PublishAll" BeforeTargets="GenerateNuspec">
     <ItemGroup>
