--- a/Game08.Sdk.CodeMixer.Sandbox.MsBuildRunner/Game08.Sdk.CodeMixer.Sandbox.MsBuildRunner.csproj
+++ b/Game08.Sdk.CodeMixer.Sandbox.MsBuildRunner/Game08.Sdk.CodeMixer.Sandbox.MsBuildRunner.csproj
@@ -6,8 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.CodeAnalysis" Version="3.3.0-beta2-final" />
-    <PackageReference Include="System.IO.Abstractions" Version="6.0.32" />
+    <PackageReference Include="Microsoft.CodeAnalysis" Version="3.4.0" />
+    <PackageReference Include="System.IO.Abstractions" Version="7.1.1" />
   </ItemGroup>
 
   <ItemGroup>
