--- a/Game08.Sdk.CodeMixer.Launcher.MSBuild/Game08.Sdk.CodeMixer.Launcher.MSBuild.csproj
+++ b/Game08.Sdk.CodeMixer.Launcher.MSBuild/Game08.Sdk.CodeMixer.Launcher.MSBuild.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFrameworks>netcoreapp2.2;net472</TargetFrameworks>
+    <Configurations>Debug;Release;Debug-cli-tools</Configurations>
   </PropertyGroup>
 
   <PropertyGroup>
