--- a/Game08.Sdk.CodeMixer.CSharp/Game08.Sdk.CodeMixer.CSharp.csproj
+++ b/Game08.Sdk.CodeMixer.CSharp/Game08.Sdk.CodeMixer.CSharp.csproj
@@ -1,7 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;netcoreapp2.2;net472</TargetFrameworks>    
+    <TargetFrameworks>netstandard2.0;netcoreapp2.2;net472</TargetFrameworks>
+    <Configurations>Debug;Release;Debug-cli-tools</Configurations>    
   </PropertyGroup>
 
   <ItemGroup>
