--- a/Game08.Sdk.CodeMixer.Glsl.MsBuild/Game08.Sdk.CodeMixer.Glsl.MsBuild.csproj
+++ b/Game08.Sdk.CodeMixer.Glsl.MsBuild/Game08.Sdk.CodeMixer.Glsl.MsBuild.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFrameworks>netcoreapp2.2;net472</TargetFrameworks>
+    <Configurations>Debug;Release;Debug-cli-tools</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
