--- a/Game08.Sdk.CodeMixer.LimitedTypeScript.UnitTests/Game08.Sdk.CodeMixer.LimitedTypeScript.UnitTests.csproj
+++ b/Game08.Sdk.CodeMixer.LimitedTypeScript.UnitTests/Game08.Sdk.CodeMixer.LimitedTypeScript.UnitTests.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
+    <Configurations>Debug;Release;Debug-cli-tools</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
