--- a/Game08.Sdk.CodeMixer.LimitedTypeScript/Game08.Sdk.CodeMixer.LimitedTypeScript.csproj
+++ b/Game08.Sdk.CodeMixer.LimitedTypeScript/Game08.Sdk.CodeMixer.LimitedTypeScript.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;netcoreapp2.2;net472</TargetFrameworks>
+    <Configurations>Debug;Release;Debug-cli-tools</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
