--- a/Game08.Sdk.CodeMixer.LimitedTypeScript.UnitTests/Game08.Sdk.CodeMixer.LimitedTypeScript.UnitTests.csproj
+++ b/Game08.Sdk.CodeMixer.LimitedTypeScript.UnitTests/Game08.Sdk.CodeMixer.LimitedTypeScript.UnitTests.csproj
@@ -6,17 +6,33 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="FluentAssertions" Version="5.9.0" />
+    <PackageReference Include="FluentAssertions" Version="5.10.0" />
+    <PackageReference Include="Game08.Sdk.LTS.ModelToCode.Generator" Version="1.0.19">
+      <GeneratePathProperty>true</GeneratePathProperty>
+    </PackageReference>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.4.0" />
     <PackageReference Include="Moq" Version="4.13.1" />
     <PackageReference Include="NUnit" Version="3.12.0" />
-    <PackageReference Include="NUnit3TestAdapter" Version="3.15.1" />
-    <PackageReference Include="System.IO.Abstractions" Version="7.1.1" />
-    <PackageReference Include="System.IO.Abstractions.TestingHelpers" Version="7.1.1" />
+    <PackageReference Include="NUnit3TestAdapter" Version="3.16.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="System.IO.Abstractions" Version="7.1.3" />
+    <PackageReference Include="System.IO.Abstractions.TestingHelpers" Version="7.1.3" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Game08.Sdk.CodeMixer.LimitedTypeScript\Game08.Sdk.CodeMixer.LimitedTypeScript.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <NodeRedist Include="$(PkgGame08_Sdk_LTS_ModelToCode_Generator)\lib\$(TargetFramework)\NodeRedist\**\*.*" />
+    <CodeGeneratorJs Include="$(PkgGame08_Sdk_LTS_ModelToCode_Generator)\lib\$(TargetFramework)\CodeGeneratorJs\**\*.*" />
+  </ItemGroup>
+
+  <Target Name="CopyRedist" AfterTargets="Build">
+    <Copy SourceFiles="@(NodeRedist)" DestinationFolder="$(MSBuildProjectDirectory)\bin\$(Configuration)\$(TargetFramework)\NodeRedist\%(RecursiveDir)" />
+    <Copy SourceFiles="@(CodeGeneratorJs)" DestinationFolder="$(MSBuildProjectDirectory)\bin\$(Configuration)\$(TargetFramework)\CodeGeneratorJs\%(RecursiveDir)" />
+  </Target>
 
 </Project>
