--- a/ForgedOnce.TypeScript/ForgedOnce.TypeScript.nuspec
+++ b/ForgedOnce.TypeScript/ForgedOnce.TypeScript.nuspec
@@ -1,13 +1,13 @@
 ﻿<package xmlns="http://schemas.microsoft.com/packaging/2012/06/nuspec.xsd">
   <metadata>
     <id>ForgedOnce.TypeScript</id>
-    <version>1.0.60</version>
+    <version>0.1.0</version>
     <authors>Yevgen Nabokov</authors>
     <description>Limited TypeScript library for the code generation pipeline.</description>
     <dependencies>      
       <dependency id="Newtonsoft.Json" version="12.0.1" />
-      <dependency id="ForgedOnce.TsLanguageServices.ModelBuilder" version="1.0.8" />
-      <dependency id="ForgedOnce.TsLanguageServices.ModelToCode.Generator" version="1.0.3" />
+      <dependency id="ForgedOnce.TsLanguageServices.ModelBuilder" version="0.1.0" />
+      <dependency id="ForgedOnce.TsLanguageServices.ModelToCode" version="0.1.0" />
     </dependencies>
   </metadata>
   <files>
