--- a/ForgedOnce.Launcher.MSBuild.WithDefaultAdapters/ForgedOnce.Launcher.MSBuild.WithDefaultAdapters.nuspec
+++ b/ForgedOnce.Launcher.MSBuild.WithDefaultAdapters/ForgedOnce.Launcher.MSBuild.WithDefaultAdapters.nuspec
@@ -7,7 +7,7 @@
     <dependencies>
       <dependency id="Microsoft.CodeAnalysis" version="3.4" />
       <dependency id="Newtonsoft.Json" version="12.0.1" />
-      <dependency id="ForgedOnce.GlslLanguageServices" version="0.1.0" />
+      <dependency id="ForgedOnce.GlslLanguageServices.Builder" version="0.1.0" />
       <dependency id="ForgedOnce.TsLanguageServices.ModelBuilder" version="0.1.0" />
       <dependency id="ForgedOnce.TsLanguageServices.ModelToCode" version="0.1.0" />
     </dependencies>
