--- a/ForgedOnce.Glsl.MsBuild/ForgedOnce.Glsl.MsBuild.csproj
+++ b/ForgedOnce.Glsl.MsBuild/ForgedOnce.Glsl.MsBuild.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netcoreapp2.2;net472</TargetFrameworks>
+    <TargetFrameworks>netcoreapp2.2</TargetFrameworks>
     <Configurations>Debug;Release;Debug-cli-tools</Configurations>
   </PropertyGroup>
 
