--- a/SandboxPlugins/TestPlugins.AddProperty/TestPlugins.AddProperty/TestPlugins.AddProperty.csproj
+++ b/SandboxPlugins/TestPlugins.AddProperty/TestPlugins.AddProperty/TestPlugins.AddProperty.csproj
@@ -5,7 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="ForgedOnce.CSharp" Version="1.0.5" />
+    <PackageReference Include="ForgedOnce.CSharp" Version="0.2.1" />
+    <PackageReference Include="ForgedOnce.CSharp.Helpers" Version="0.1.0" />
   </ItemGroup>
   
   <PropertyGroup>
