--- a/ForgedOnce.CSharp/ForgedOnce.CSharp.nuspec
+++ b/ForgedOnce.CSharp/ForgedOnce.CSharp.nuspec
@@ -3,11 +3,16 @@
     <id>ForgedOnce.CSharp</id>
     <version>0.2.1</version>
     <authors>Yevgen Nabokov</authors>
+    <owners>Yevgen Nabokov</owners>
+    <licenseUrl>https://github.com/yevgennabokov/forgedonce/blob/master/license</licenseUrl>
+    <projectUrl>https://github.com/yevgennabokov/forgedonce</projectUrl>
+    <requireLicenseAcceptance>true</requireLicenseAcceptance>
     <description>C# library for the code generation pipeline.</description>
     <dependencies>
       <dependency id="Microsoft.CodeAnalysis" version="3.5" />
       <dependency id="Newtonsoft.Json" version="12.0.3" />
     </dependencies>
+    <tags>forgedonce code generation tool c# csharp</tags>
   </metadata>
   <files>
     <file src="$publishdir$\netstandard2.0\**\*" target="lib/netstandard2.0/" />    
