--- a/ForgedOnce.Glsl/ForgedOnce.Glsl.nuspec
+++ b/ForgedOnce.Glsl/ForgedOnce.Glsl.nuspec
@@ -3,11 +3,16 @@
     <id>ForgedOnce.Glsl</id>
     <version>0.2.1</version>
     <authors>Yevgen Nabokov</authors>
+    <owners>Yevgen Nabokov</owners>
+    <licenseUrl>https://github.com/yevgennabokov/forgedonce/blob/master/license</licenseUrl>
+    <projectUrl>https://github.com/yevgennabokov/forgedonce</projectUrl>
+    <requireLicenseAcceptance>true</requireLicenseAcceptance>
     <description>GLSL library for the code generation pipeline.</description>
     <dependencies>
       <dependency id="Newtonsoft.Json" version="12.0.3" />
       <dependency id="ForgedOnce.GlslLanguageServices.Builder" version="0.1.0" />
     </dependencies>
+    <tags>forgedonce code generation tool glsl shader language</tags>
   </metadata>
   <files>    
     <file src="$publishdir$\netstandard2.0\**\*" target="lib/netstandard2.0/" />    
