--- a/ForgedOnce.Launcher.MSBuild.Default/ForgedOnce.Launcher.MSBuild.Default.CliTool.nuspec
+++ b/ForgedOnce.Launcher.MSBuild.Default/ForgedOnce.Launcher.MSBuild.Default.CliTool.nuspec
@@ -3,12 +3,16 @@
     <id>ForgedOnce.Launcher.MSBuild.Default.CliTool</id>
     <version>0.3.19</version>
     <authors>Yevgen Nabokov</authors>
+    <licenseUrl>https://github.com/yevgennabokov/forgedonce/blob/master/license</licenseUrl>
+    <projectUrl>https://github.com/yevgennabokov/forgedonce</projectUrl>
+    <requireLicenseAcceptance>true</requireLicenseAcceptance>
     <description>Configurable pipeline for code generation with adapters for C#, GLSL and TypeScript files.</description>
     <dependencies>
     </dependencies>
     <packageTypes>
       <packageType name="DotnetTool" />
     </packageTypes>
+    <tags>forgedonce code generation tool msbuild launcher cli dotnettool</tags>
   </metadata>
   <files>
     <!--<file src="_._" target="lib/netcoreapp2.2/" />
