--- a/ForgedOnce.TypeScript/ForgedOnce.TypeScript.nuspec
+++ b/ForgedOnce.TypeScript/ForgedOnce.TypeScript.nuspec
@@ -3,12 +3,17 @@
     <id>ForgedOnce.TypeScript</id>
     <version>0.2.1</version>
     <authors>Yevgen Nabokov</authors>
+    <owners>Yevgen Nabokov</owners>
+    <licenseUrl>https://github.com/yevgennabokov/forgedonce/blob/master/license</licenseUrl>
+    <projectUrl>https://github.com/yevgennabokov/forgedonce</projectUrl>
+    <requireLicenseAcceptance>true</requireLicenseAcceptance>
     <description>Limited TypeScript library for the code generation pipeline.</description>
     <dependencies>      
       <dependency id="Newtonsoft.Json" version="12.0.3" />
       <dependency id="ForgedOnce.TsLanguageServices.ModelBuilder" version="0.1.0" />
       <dependency id="ForgedOnce.TsLanguageServices.ModelToCode" version="0.1.0" />
     </dependencies>
+    <tags>forgedonce code generation tool typescript</tags>
   </metadata>
   <files>
     <file src="$publishdir$\netstandard2.0\**\*" target="lib/netstandard2.0/" />    
