Added util to clone CSharp code files. Renamed method in preprocessor interface.

--- a/ForgedOnce.Glsl/ForgedOnce.Glsl.nuspec
+++ b/ForgedOnce.Glsl/ForgedOnce.Glsl.nuspec
@@ -1,13 +1,13 @@
 ﻿<package xmlns="http://schemas.microsoft.com/packaging/2012/06/nuspec.xsd">
   <metadata>
     <id>ForgedOnce.Glsl</id>
-    <version>0.2.1</version>
+    <version>0.3.0</version>
     <authors>Yevgen Nabokov</authors>
     <owners>Yevgen Nabokov</owners>
     <licenseUrl>https://github.com/yevgennabokov/forgedonce/blob/master/license</licenseUrl>
     <projectUrl>https://github.com/yevgennabokov/forgedonce</projectUrl>
     <requireLicenseAcceptance>true</requireLicenseAcceptance>
-    <description>GLSL library for the code generation pipeline.</description>
+    <description>GLSL language library for the code generation pipeline.</description>
     <dependencies>
       <dependency id="Newtonsoft.Json" version="12.0.3" />
       <dependency id="ForgedOnce.GlslLanguageServices.Builder" version="0.1.0" />
