--- a/ForgedOnce.TypeScript/ForgedOnce.TypeScript.nuspec
+++ b/ForgedOnce.TypeScript/ForgedOnce.TypeScript.nuspec
@@ -1,13 +1,13 @@
 ﻿<package xmlns="http://schemas.microsoft.com/packaging/2012/06/nuspec.xsd">
   <metadata>
     <id>ForgedOnce.TypeScript</id>
-    <version>0.2.1</version>
+    <version>0.3.0</version>
     <authors>Yevgen Nabokov</authors>
     <owners>Yevgen Nabokov</owners>
     <licenseUrl>https://github.com/yevgennabokov/forgedonce/blob/master/license</licenseUrl>
     <projectUrl>https://github.com/yevgennabokov/forgedonce</projectUrl>
     <requireLicenseAcceptance>true</requireLicenseAcceptance>
-    <description>Limited TypeScript library for the code generation pipeline.</description>
+    <description>TypeScript language library for the code generation pipeline.</description>
     <dependencies>      
       <dependency id="Newtonsoft.Json" version="12.0.3" />
       <dependency id="ForgedOnce.TsLanguageServices.ModelBuilder" version="0.1.0" />
