--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
 SandboxProjects/TestProjects.GlslPluginTest/Product/Scripts/**/* linguist-generated=true
+SandboxProjects/TestProjects.TSPluginTest/Product/Scripts/**/* linguist-generated=true
