--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 SandboxProjects/TestProjects.GlslPluginTest/Product/Scripts/**/* linguist-generated=true
+SandboxProjects/TestProjects.GlslPluginTest/Product/Scripts/* linguist-generated=true
 SandboxProjects/TestProjects.TSPluginTest/Product/Scripts/**/* linguist-generated=true
 SandboxProjects/TestProjects.MetadataTest/Product/Scripts/**/* linguist-generated=true
