--- a/ForgedOnce.Glsl/ForgedOnce.Glsl.nuspec
+++ b/ForgedOnce.Glsl/ForgedOnce.Glsl.nuspec
@@ -1,20 +1,22 @@
 ﻿<package xmlns="http://schemas.microsoft.com/packaging/2012/06/nuspec.xsd">
   <metadata>
     <id>ForgedOnce.Glsl</id>
-    <version>0.4.2</version>
+    <version>0.4.3</version>
     <authors>Yevgen Nabokov</authors>
     <owners>Yevgen Nabokov</owners>
     <licenseUrl>https://github.com/yevgennabokov/forgedonce/blob/master/license</licenseUrl>
     <projectUrl>https://github.com/yevgennabokov/forgedonce</projectUrl>
     <requireLicenseAcceptance>true</requireLicenseAcceptance>
-    <description>GLSL language library for the code generation pipeline.</description>
+    <description>GLSL language library for the ForgedOnce code generation pipeline</description>
     <dependencies>
       <dependency id="Newtonsoft.Json" version="12.0.3" />
-      <dependency id="ForgedOnce.GlslLanguageServices.Builder" version="0.1.0" />
+      <dependency id="System.IO.Abstractions" version="8.0.3" />
+      <dependency id="ForgedOnce.GlslLanguageServices.Builder" version="0.1.3" />
     </dependencies>
     <tags>forgedonce code generation tool glsl shader language</tags>
   </metadata>
-  <files>    
+  <files>
+    <file src="ThirdPartyNotice.txt" target="" />
     <file src="$publishdir$\netstandard2.0\**\*" target="lib/netstandard2.0/" />    
   </files>
 </package>
