--- a/ForgedOnce.Launcher.MSBuild/ForgedOnce.Launcher.MSBuild.nuspec
+++ b/ForgedOnce.Launcher.MSBuild/ForgedOnce.Launcher.MSBuild.nuspec
@@ -12,6 +12,7 @@
     <tags>forgedonce code generation tool msbuild launcher</tags>
   </metadata>
   <files>
+    <file src="ThirdPartyNotice.txt" target="" />
     <file src="_._" target="lib/netcoreapp2.2/" />
     <file src="_._" target="lib/netstandard2.0/" />
     <file src="_._" target="lib/net472/" />    
