Added Release-cli-tool config. Removed old nuget.config

--- a/ForgedOnce.CSharp.Helpers/ForgedOnce.CSharp.Helpers.csproj
+++ b/ForgedOnce.CSharp.Helpers/ForgedOnce.CSharp.Helpers.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0</TargetFrameworks>
+    <Configurations>Debug;Release;Release-cli-tools</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
