--- a/ForgedOnce.Launcher.MSBuild/ForgedOnce.Launcher.MSBuild.csproj
+++ b/ForgedOnce.Launcher.MSBuild/ForgedOnce.Launcher.MSBuild.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Library</OutputType>
     <TargetFrameworks>netcoreapp3.1</TargetFrameworks>
-    <Configurations>Debug;Release;Debug-cli-tools</Configurations>
+    <Configurations>Debug;Release;Debug-cli-tools;Release-cli-tools</Configurations>
   </PropertyGroup>
 
   <PropertyGroup>
