--- a/ForgedOnce.CSharp.Helpers/ForgedOnce.CSharp.Helpers.nuspec
+++ b/ForgedOnce.CSharp.Helpers/ForgedOnce.CSharp.Helpers.nuspec
@@ -1,10 +1,11 @@
 ﻿<package xmlns="http://schemas.microsoft.com/packaging/2012/06/nuspec.xsd">
   <metadata>
     <id>ForgedOnce.CSharp.Helpers</id>
-    <version>0.1.0</version>
+    <version>0.1.1</version>
     <authors>Yevgen Nabokov</authors>
     <owners>Yevgen Nabokov</owners>
-    <licenseUrl>https://github.com/yevgennabokov/forgedonce/blob/master/license</licenseUrl>
+    <copyright>Yevgen Nabokov</copyright>
+    <license type="expression">MIT</license>
     <projectUrl>https://github.com/yevgennabokov/forgedonce</projectUrl>
     <requireLicenseAcceptance>true</requireLicenseAcceptance>
     <description>Helpers for C# code analysis and syntax generation.</description>
