--- a/ForgedOnce.CSharp.MsBuild/ForgedOnce.CSharp.MsBuild.csproj
+++ b/ForgedOnce.CSharp.MsBuild/ForgedOnce.CSharp.MsBuild.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFrameworks>netcoreapp3.1</TargetFrameworks>
-    <Configurations>Debug;Release;Debug-cli-tools</Configurations>
+    <Configurations>Debug;Release;Debug-cli-tools;Release-cli-tools</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
