--- a/ForgedOnce.Glsl/ForgedOnce.Glsl.nuspec
+++ b/ForgedOnce.Glsl/ForgedOnce.Glsl.nuspec
@@ -1,9 +1,10 @@
 ﻿<package xmlns="http://schemas.microsoft.com/packaging/2012/06/nuspec.xsd">
   <metadata>
     <id>ForgedOnce.Glsl</id>
-    <version>0.4.3</version>
+    <version>0.4.4</version>
     <authors>Yevgen Nabokov</authors>
     <owners>Yevgen Nabokov</owners>
+    <copyright>Yevgen Nabokov</copyright>
     <licenseUrl>https://github.com/yevgennabokov/forgedonce/blob/master/license</licenseUrl>
     <projectUrl>https://github.com/yevgennabokov/forgedonce</projectUrl>
     <requireLicenseAcceptance>true</requireLicenseAcceptance>
@@ -11,7 +12,7 @@
     <dependencies>
       <dependency id="Newtonsoft.Json" version="12.0.3" />
       <dependency id="System.IO.Abstractions" version="8.0.3" />
-      <dependency id="ForgedOnce.GlslLanguageServices.Builder" version="0.1.3" />
+      <dependency id="ForgedOnce.GlslLanguageServices.Builder" version="0.1.7" />
     </dependencies>
     <tags>forgedonce code generation tool glsl shader language</tags>
   </metadata>
